web/less/frontend/modules/marketplace.less
@import "../_variables.less";
@import "../_mixins.less";

// Market

#marketplace-spotlight {
  background-color: @yellowHighlight;
  padding: 15px 0 10px 0;
  margin-top: 20px;
  font-size:12px;

  .thumbnail:hover {
    border: 1px solid @blue;
  }

  .span4 {
    width: 190px;
    margin-left: 10px;
    margin-right: 5px;
  }

  .spotlight-title {
    .custom-font(20px, 22px, italic, bold);
    .smooth-font();
    padding: 0 0 10px 10px;
    color: @blueDark;
  }

  .thumbnail {
    .border-radius(0);
    border-color: #c9beb1;
    background-color: white;
    padding: 3px 3px 6px 3px;

    h4 {
      margin: 0;
      font-size: 12px;
      line-height: 16px;
    }
    .spotlight-thumb {
      overflow: hidden;
      position: relative;
      width: 181px;
      margin-left: 1px;
      img {
        margin-top: 1px;
      }

      .blue-label {
        position: absolute;
        top: 24px;
        right: -32px;
        display: block;
        line-height: 20px;
        text-transform: uppercase;
        letter-spacing: 0.07em;
        font-weight: bold;
        font-size: 11px;
        background: @blueDark;
        color: white;
        text-align: center;
        .size(20px, 138px);
        .transform(rotate(45deg)translate3d(0, 0, 0));
      }
    }
    .spotlight-text {
      padding: 10px 5px 0 5px;
      height: 110px;
      overflow: hidden;
      p {
        margin-bottom: 0;
        font-size:12px;
        line-height: 16px;
      }
    }
    .spotlight-price {
      text-align: right;
      font-weight: bold;
      color: @blueDark;
      margin-top: 8px;
    }
  }
}
.lt-ie10 #marketplace-spotlight .thumbnail .blue-label {
  -ms-transform: rotate(45deg);
}
.lt-ie9 #marketplace-spotlight .thumbnail .blue-label {
  width: 90px;
  right: 0;
  padding-right: 4px;
  text-align: right;

}

.featured-sellers {
  width: 100%;
  margin-bottom: 10px;

  .spotlight-inner {
    border: 1px solid @boxBorder;
  }
  .thumbnails-inner {
    background-color: @yellowHighlight;
    .clearfix();
  }
  .span2 {
    .square(54px);
    margin: 5px 0 4px 4px;
  }
  .thumbnails {
    margin-left: 2px;
    margin-bottom: 5px;

    a {
    .box-shadow(none);
    &:hover {
      padding: 3px;
      background-color: white;
      border: 1px solid @blue;
      .border-radius(0);

    }
    }
  }
  .thumbnail {
    border: none;
    padding: 0;
    &:hover img {
      max-width: 48px;
      max-height: 46px;
    }
  }
  .seller {
    margin: 8px 8px 7px 8px;

    p {
      margin: 2px 0;
      line-height: 16px;
    }
  }
}

#all-market-categories {
  margin-top: 20px;

  .span4 {
    margin-bottom: 20px;

    a {
      color: @blue;
      line-height: 20px;
      &:hover {
        color: @red;
        text-decoration: none;
      }
    }
    h2 {
      line-height: 28px;
      margin-bottom: 15px;
    }
    h2 a {
      color: @blueDark;
      line-height: 28px;
      &:hover {
        text-decoration: none;
        border-bottom: none;
      }
    }
  }
}

div.onecolumn {
  ul {
    list-style-type: none;
    margin: 0;

    li {
      color: @red;
    }

    ul {
      margin-left: 15px;
    }
  }
}

#body-marketplace-index #collectibles .span3 {
  margin-right: 1px;
}


//HOLIDAY MARKET

//Reset main styles
#body-marketplace-holiday {
  .slots-container {
    border: none;
  }
  header, footer, nav, #breadcrumbs, .slots-container, #slot1, #slot2, #footer-links {
    width: 980px;
  }
}


#HolidayMarketHeader {
  .size(248px, 980px);
  background: url("@{baseUrl}/misc/holiday-market/keep-it-classic-hm-header-bg.jpg") no-repeat 0 0;
  border-top: 1px solid #eaede6;
  .clearfix();

  h1 {
    margin: 40px 0 0 40px;
    font-size: 70px;
    line-height: 70px;
    font-weight: bold;
    text-transform: uppercase;
    color: #fff;
  }
  h2 {
    margin: 0 0 0 40px;
    font-size: 40px;
    line-height: 40px;
    font-weight: bold;
    color: #fff;
  }
}

.holiday-market-menu-wrapper {
  .size(68px,100%);
  padding-bottom: 10px;
  background-color: #ecebec;
  .clearfix();

  .navbar-inner {
    position: relative;
    min-height: 50px;
    width: 100%;
    clear: both;
    padding: 0;
    #gradient > .vertical(#114F0B, #204A24);
    .box-shadow(inset 0px 2px 6px 0px rgba(0, 0, 0, 0.15));
    border: none;
    .border-radius(0);

    .centering {
      width: 800px;
      overflow: hidden;
      display: block;
      margin: 0 auto;
    }
    .arrow-previous, .arrow-next {
      display: block;
      position: absolute;
      top: 10px;

    }
    .arrow-previous {
      left: 45px;
    }
    .arrow-next {
      right: 45px;
    }
  }

  ul.nav {
    position: relative;
    display: block;
    margin-bottom: 0;
    width: 7000px;

    > li {
      position: relative;
      float: left;
      height: 50px;
      width: 160px;

      > a {
        height: 38px;
        padding: 6px 40px;
        font-size: 14px;
        line-height: 18px;
        text-align: center;
        color: #dde4d4;
        &:hover {
          background-color: #448828;
        }

        strong {
          font-size: 18px;
          line-height: 18px;
          font-weight: bold;
          text-transform: uppercase;
          letter-spacing: 0.04em;
        }
        //Special hack - Vertical alignment in menu list
        > span {
          line-height: 45px;
        }
      }

      &.active > a {
        //#gradient > .vertical-three-colors(#4f9033, #5da93c, 10%, #5eac3d);
        background-color: #5eac3d;
        .box-shadow(inset 0 2px 6px 0 rgba(0, 0, 0, 0.15));

        &:hover {
          background-color: #5eac3d;
        }
        &:after {
          content: "";
          position: absolute;
          top: 100%;
          left: 40%;
          border-top: 16px solid #5eac3d;
          border-top-color: #5eac3d;
          border-left: 16px solid transparent;
          border-right: 16px solid transparent;
        }
      }
    }
  }
}

/* hide infinite-scroll loading box */
#infscr-loading {
  visibility: hidden;
}

#body-marketplace-holiday {
  .section-title.blue {
    margin-bottom: 0;
  }

  .view-all-button {
    float: left;
    margin-top: 2px;
  }
}

